--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,7 @@
 .header__lang-link {
   text-decoration: none;
   color: #FFFFFF;
-  font-family: 'Inter';
-  font-size: 24px;
+  font-family: "Inter", "Arial ", sans-serif;  font-size: 24px;
   font-weight: 400;
   line-height: 28px;
   text-align: right;
