--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding-bottom: 40px;
   padding-top: 92px;
-  font-family: 'Inter';
+  font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
