--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   margin: 0 auto 64px;
-  font-family: 'Inter';
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
