--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,7 +2,7 @@
   max-width: 456px;
   height: 22px;
   align-self: end;
-  font-family: 'Inter';
+  font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
