--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,7 +5,7 @@
   height: 12px;
   left: 648px;
   top: 2623px;
-  font-family: 'Inter';
+  font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
