--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,6 @@
 .intro__list {
   max-width: 690px;
-  height: 90px;
+  
   margin: 0;
   font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
@@ -13,7 +13,7 @@
 @media screen and (max-width: 320px) {
   .intro__list {
     width: 288px;
-    height: 90px;
+   ;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
