--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -39,6 +39,12 @@
   }
 }
 
+@media screen and (max-width: 470px) {
+  .cover__background {
+    min-height: 230px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__background {
     min-height: 200px;
