--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -19,6 +19,21 @@
   }
 } 
 
+@media screen and (max-width: 420px) {
+.cover__title {
+  max-width: 288px;
+  margin-bottom: 16px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
+
+    
+  }
+} 
+
 @media screen and (max-width: 320px) {
 .cover__title {
   max-width: 288px;
