--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   max-width: 1184px;
   margin: 0 48px 0 48px;
- padding-top: 92px;
+  padding-top: 92px;
   padding-bottom: 24px;
   gap: 0;
  }
@@ -23,13 +23,23 @@
   }
 }
 
+@media screen and (max-width: 760px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    max-width: 186px;
+    column-gap: 32px;
+    padding-top: 14px;
+  }
+}
+
 @media screen and (max-width: 470px) {
   .footer {
     display: flex;
     flex-direction: column;
     max-width: 186px;
     column-gap: 32px;
-    padding-top: 64px;
+    padding-top: 14px;
   }
 }
 
