--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -17,14 +17,28 @@
 @media screen and (max-width: 768px) {
   .lead__title {
   margin-bottom: 32px;
+  max-width: 720px;
+  font-size: 12vw;
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 660px) {
   .lead__title {
-    font-size: 12vw;
+  margin-bottom: 32px;
+  font-size: 12vw;
   }
 }
+
+@media screen and (max-width: 560px) {
+  .lead__title {
+  margin-bottom: 32px;
+  font-size: 12vw;
+  }
+}
+
+
+
+
 
 @media screen and (max-width: 320px) {
   .lead__title {
