--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,6 +4,14 @@
   align-self: end;
 }
 
+@media screen and (max-width: 470px) {
+  .place__website {
+    align-self: flex-start;
+    margin-left: 0;
+    margin-bottom: 32px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .place__website {
     align-self: flex-start;
