--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -14,7 +14,7 @@
 @media screen and (max-width: 1024px) {
   .place {
     max-width: 928px;
-    margin-left: 48px;
+   
     margin-bottom: 80px;
     grid-column-gap: 32px;
   }
@@ -23,7 +23,7 @@
 @media screen and (max-width: 768px) {
   .place {
     max-width: 720px;
-    margin: 73px 0 0 24px;
+    margin: 73px auto;
     row-gap: 25px;
 
   }
@@ -35,7 +35,7 @@
     flex-direction: column;
     max-width: 320px;
     row-gap: 0;
-    margin: 0;
+    margin: auto;
     padding-bottom: 50px;
   
 
