--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -16,15 +16,16 @@
   background-size: cover;
   background-position: center;
   position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  opacity: 0.7;
+  background-color: #2A2C2F;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.3;
 }
 
 .cover__background:hover::before {
- opacity: 0.3;
+ opacity: 0.8;
 }
 
 @media screen and (max-width: 1024px) {
