--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,17 @@
 .cover {
   max-width: 1184px;
-  margin: 0px 48px 92px 48px;
+  margin: 0px auto;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
     margin: 0;
     max-width: 1024px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .cover {
+    margin-top: 16px;
+    
   }
 }
