--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,34 +8,21 @@
   margin:  0;
   align-self: flex-end;
   margin-left: auto;
+  white-space: nowrap;
 }
 
-@media screen and (max-width: 1024px) {
-  .footer__copyright {
-    margin-left: auto;
-  }
-}
 
 @media screen and (max-width: 480px) {
   .footer__copyright {
-    width: 290px;
     margin: auto;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 14px;
+    
   }
 }
 
 @media screen and (max-width: 320px) {
   .footer__copyright {
-    width: 290px;
-    margin: auto;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
+    margin-top: 16px;
     line-height: 14px;
+    
   }
 }
