--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -9,14 +9,25 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 320px) {
+.footer__link:hover {
+  opacity: 0.8;
+  transition: ease 0.3s;
+}
+
+.footer__link:last-of-type {
+  margin: 0;
+}
+
+@media screen and (max-width: 760px) {
   .footer__link {
-   padding-bottom: 32px;
+    padding-bottom: 32px;
   }
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 320px) {
   .footer__link {
-   padding-bottom: 32px;
+    font-size: 24px;
+    line-height: 24px;
   }
 }
