--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   max-width: 1184px;
-  margin: 0 48px 0 48px;
+  margin: 0 auto;
   padding-top: 92px;
   padding-bottom: 24px;
   gap: 0;
@@ -45,10 +45,6 @@
 
 @media screen and (max-width: 320px) {
   .footer {
-    display: flex;
-    flex-direction: column;
-    max-width: 186px;
-    column-gap: 32px;
     padding-top: 64px;
 
   }
