--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,9 +6,20 @@
   font-weight: 400;
   line-height: 28px;
   text-align: right;
-  max-width: 30px;
   }
 
-.header__lang-link:first-of-type {
-  text-decoration: underline;
+  .header__lang-link:hover {
+  opacity: 0.8;
+  transition: ease 0.3s;
+  }
+
+  @media screen and (max-width: 320px) {
+  .header__lang-link {
+    max-width: 22px;
+    font-size: 18px;
+    line-height: 20px;
+
+   
+  }
 }
+
