--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
   max-width: 176px;
   margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    max-width: 142px;
+   
+  }
+}
