--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,13 @@
 .header {
   max-width: 1184px;
-  width: calc(100% - 96px);
-  height: 52px;
   display: grid;
   grid-template-columns: auto 30px 30px;
   align-items: end;
   margin: 0 48px 56px 48px;
   padding-top:  28px;
   column-gap: 18px;
+  margin: 0 auto;
+  margin-bottom: 56px;
 }
 
 @media screen and (max-width: 1028px) {
@@ -19,21 +19,20 @@
 @media screen and (max-width: 768px) {
   .header {
     max-width: 720px;
-    margin: 0 auto 48px;
+    margin: 0 24px 48px 24px;
   }
 }
 
-@media screen and (max-width: 470px) {
-  .header {
-    max-width: 100%;
-    padding-top: 16px;
-  }
-}
+
 
 @media screen and (max-width: 320px) {
   .header {
-    max-width: 100%;
-    margin: 16px 16px 48px 16px;
+    margin: 0;
     padding-top: 16px;
+    padding-bottom: 48px;
+    padding-left: 16px;
+    padding-right: 16px;
+
+   
   }
 }
