--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,22 +7,13 @@
   color: #FFFFFF;
   margin: 0;
   padding-bottom: 33px;
+  max-width: 690px;
 }
 
-@media screen and (max-width: 1024px) {
-  .intro__text {
-
-  }
-}
 
 @media screen and (max-width: 320px) {
   .intro__text {
     width: 288px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 163%;
     margin-left: 16px;
 
   }
