--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,13 +2,13 @@
   max-width: 690px;
   margin: 0;
   padding-bottom: 40px;
-  padding-top: 92px;
   font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #FFFFFF;
+  text-align: left;
 }
 
 @media screen and (max-width: 1024px) {
@@ -27,8 +27,6 @@
 @media screen and (max-width: 320px) {
   .intro__title {
     max-width: 288px;
-    font-style: normal;
-    font-weight: 900;
     font-size: 32px;
     line-height: 35px;
     margin-left: 16px;
