--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,25 +6,29 @@
   font-size: 10px;
   line-height: 14px;
   max-width: 100%;
+  letter-spacing: 1.5px;
+  margin: 0;
+  margin-top: 8px;
+  margin-bottom: 92px;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__caption {
     margin-top: 8px;
-    
-  }
+    }
 }
 
 @media screen and (max-width: 768px) {
   .lead__caption {
     margin-left: 24px;
+    margin-bottom: 0;
     
   }
 }
 
 @media screen and (max-width: 480px) {
   .lead__caption {
-    margin-left: 0px;
+    margin-left: 16px;
     
   }
 }
