--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -13,11 +13,9 @@
   .lead__subtitle {
     width: 288px;
     font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
+    margin-bottom: 40px;
 
   }
 }
