--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,6 +14,8 @@
     gap: 14px;
     max-width: 928px;
     margin: 0 auto;
+    margin-top: 92px;
+    margin-bottom: 92px;
   }
 }
 
@@ -32,7 +34,7 @@
   .photo-grid {
     padding-bottom: 64px;
     margin: auto;
-    max-width: 370;
+    max-width: 370px;
   }
 }
 
@@ -42,7 +44,7 @@
     flex-direction: column;
     gap: 12px;
     max-width: 320px;
-    margin-top: 88px;
+    padding-bottom: 0;
     margin-bottom: 64px;
    
     
