--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,4 @@
 .place__link {
-  max-width: 456px;
   align-self: end;
   font-family: "Inter", "Arial ", sans-serif;
   font-style: normal;
@@ -11,15 +10,8 @@
   
 }
 
-@media screen and (max-width: 768px) {
-  .place__link {
-    max-width: 352px;
+.place__link:hover {
+  opacity: 0.8;
+  transition: ease 0.3s;
   }
-}
 
-@media screen and (max-width: 320px) {
-  .place__link {
-    max-width: 288px;
-    
-  }
-}
