--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -21,8 +21,9 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    font-size: 18px;
-    margin: 0;
+    font-size: 16px;
+    margin-bottom: 25px;
+    
     
 
   
@@ -35,13 +36,11 @@
 @media screen and (max-width: 320px) {
   .place__paragraph {
     width: 288px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
-    line-height: 163%;
-    margin: 0;
     margin-left: 16px;
+    margin-bottom: 25px;
+
+
     
   }
 }
