--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,10 @@
-@import url('../fonts/fonts.css');
 @import url('../vendor/normalize.css');
+@import url('../fonts/fonts.css');
 @import url('../blocks/page/page.css');
-
+@import url('../blocks/content/content.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__lang-link/header__lang-link.css');
+@import url('../blocks/header/__lang-link/_underline/header__lang-link_underline.css');
 @import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/cover/cover.css');
 @import url('../blocks/cover/__background/cover__background.css');
