--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -12,6 +12,8 @@
 }
 
 
+
+
 @media screen and (max-width: 480px) {
   .footer__copyright {
     margin: auto;
@@ -23,6 +25,7 @@
   .footer__copyright {
     margin-top: 16px;
     line-height: 14px;
+    margin-left: 0;
     
   }
 }
