--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,7 @@
   font-size: 16px;
   line-height: 18px;
   color: #FFFFFF;
+  white-space: nowrap;
 }
 
 .footer__link:hover {
@@ -29,5 +30,6 @@
   .footer__link {
     font-size: 24px;
     line-height: 24px;
+    
   }
 }
