--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -33,19 +33,14 @@
   }
 }
 
-@media screen and (max-width: 470px) {
-  .footer {
-    display: flex;
-    flex-direction: column;
-    max-width: 186px;
-    column-gap: 32px;
-    padding-top: 14px;
-  }
-}
 
 @media screen and (max-width: 320px) {
   .footer {
     padding-top: 64px;
+    margin: 0;
+    margin-left: 16px;
+    margin-right: 0;
+    max-width: 186px;
 
   }
 }
