--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -7,13 +7,14 @@
   font-size: 12px;
   line-height: 18px;
   color: #FFFFFF;
+  padding: 0;
 }
 
 @media screen and (max-width: 320px) {
   .intro__list {
     width: 288px;
     margin-left: 16px;
-    margin-right: 0;
+    
    
 
   }
