--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -10,10 +10,17 @@
   max-width: 690px;
 }
 
+@media screen and (max-width: 768px) {
+  .intro__text {
+    max-width: 720px;
+
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   .intro__text {
-    width: 288px;
+    max-width: 288px;
     margin-left: 16px;
 
   }
