--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,6 +10,7 @@
   margin: 0;
   margin-top: 8px;
   margin-bottom: 92px;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1024px) {
