--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -24,12 +24,13 @@
     margin: 72px auto;
     margin-top: 88px;
     column-gap: 28px;
+    margin-bottom: 90px;
     
 
   }
 }
 
-@media screen and (max-width: 585px) {
+@media screen and (max-width: 655px) {
   .place {
     display: flex;
     flex-direction: column;
@@ -43,9 +44,6 @@
 
 @media screen and (max-width: 320px) {
   .place {
-    display: flex;
-    flex-direction: column;
-    max-width: 320px;
     margin: 0;
    
 
