--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url('../blocks/page/page.css');
 @import url('../blocks/content/content.css');
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/__lang-links/header__lang-links.css');
 @import url('../blocks/header/__lang-link/header__lang-link.css');
 @import url('../blocks/header/__lang-link/_underline/header__lang-link_underline.css');
 @import url('../blocks/header/__logo/header__logo.css');
@@ -12,9 +13,11 @@
 @import url('../blocks/cover/__subtitle/cover__subtitle.css');
 @import url('../blocks/cover/__title/cover__title.css');
 @import url('../blocks/intro/intro.css');
+@import url('../blocks/intro/__item/intro__item.css');
 @import url('../blocks/intro/__list/intro__list.css');
 @import url('../blocks/intro/__text/intro__text.css');
 @import url('../blocks/intro/__title/intro__title.css');
+@import url('../blocks/intro/__span-accent/intro__span-accent.css');
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/lead/__caption/lead__caption.css');
 @import url('../blocks/lead/__image/lead__image.css');
@@ -31,8 +34,10 @@
 @import url('../blocks/place/__website/place__website.css');
 @import url('../blocks/places/places.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__list/footer__list.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/footer/__link/footer__link.css');
+
 
 
 
