--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -21,6 +21,13 @@
   }
 }
 
+@media screen and (max-width: 690px) {
+  .footer__copyright {
+    margin: auto;
+    
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer__copyright {
     margin-top: 16px;
