--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,6 +23,13 @@
   }
 }
 
+@media screen and (max-width: 690px) {
+  .footer {
+    flex-direction: column;
+
+  }
+}
+
 
 
 
@@ -33,6 +40,7 @@
     margin-left: 16px;
     margin-right: 0;
     max-width: 186px;
+    
 
   }
 }
