--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,6 +9,13 @@
   max-width: 640px;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     width: 288px;
