--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -44,6 +44,7 @@
       font-size: 32px;
       line-height: 35px;
       margin-left: 16px;
+      margin-bottom: 32px;
       padding: 0;
       
 
