--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 1279px) {
   .footer {
-    width: calc(100% - 2*48px)
+    width: calc(100% - 2*48px);
     }
 }
  
