--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
   max-width: 1184px;
   margin: 0px auto;
+  padding-top: 12px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -9,9 +10,19 @@
     max-width: 1024px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .cover {
+    padding-top: 18px;
+    
+  }
+}
+
+
 @media screen and (max-width: 320px) {
   .cover {
     margin-top: 16px;
+    padding-top: 0;
     
   }
 }
