--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -34,6 +34,7 @@
   @media screen and (max-width: 320px) {
     .place__title {
       width: 288px;
+      margin-bottom: 32px;
       font-size: 32px;
       line-height: 35px;
       margin-left: 16px;
